# rzo_coeur_api

./: .dockerignore  .env.example  .env.local  .gitignore  .pre-commit-config.yaml  .prettierignore  .releaserc.json  Dockerfile  Makefile  README.md  claude.md  docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  init-postgis.sh  nginx.conf  pyproject.toml  pyvenv.cfg  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  release-promote.yml  release-rc.yml
api/: admin.py  admin_sites.py  auth_views.py  authentication.py  cart_attributions.py  constants.py  emails.py  enums.py  forms.py  managers.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
api/articles/: admin.py  serializers.py  views.py
api/carts/: admin.py  forms.py  permissions.py  serializers.py  views.py
api/migrations/: 0001_initial.py  0002_alter_article_cart.py  0003_remove_cashier_id_remove_client_id_and_more.py  0004_cart_collected_at.py  0005_make_cart_recipient_nullable.py  0005_shop_city_shop_latitude_shop_longitude_and_more.py  0006_remove_shop_address_alter_shop_city_and_more.py  0006_set_pending_carts_recipient_to_none.py  0007_remove_cart_status.py  0007_remove_shop_latitude_remove_shop_longitude_and_more.py  0008_remove_shop_address_remove_socialcenter_address_and_more.py  0008_shop_social_worker.py  0011_alter_article_name.py  (+17 more)
config/: settings.py  storage.py  test_runner.py  urls.py
e2e/: conftest.py
nginx/: Dockerfile
scripts/: backup_db.sh  deploy.sh  update_vps_conf_files.sh
webhook/: Dockerfile  hooks.json
(+96 files in other folders)
