[project]
name = "rzo-coeur-api"
version = "1.0.0"
description = "Backend API for Les réseaux du coeur"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django==5.2.7",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.5.1",
    "django-allauth==65.10.0",
    "django-cors-headers==4.6.0",
    "django-extensions==4.1",
    "drf-auth-kit==0.3.10",
    "drf-spectacular==0.28.0",
    "python-dotenv==1.2.1",
    "gunicorn==23.0.0",
    "structlog==25.5.0",
    "requests==2.32.5",
    "pyjwt==2.10.1",
    "psycopg2-binary==2.9.11",
    "whitenoise==6.8.2",
]

[dependency-groups]
dev = [
    "django-stubs==5.2.7",
    "djangorestframework-stubs==3.16.5",
    "mypy==1.18.2",
    "pre-commit==4.4.0",
    "ruff==0.14.10",
    "types-pyyaml==6.0.12.20250915",
    "types-requests==2.32.4.20250913",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]  # E=pycodestyle, F=pyflakes, I=isort
ignore = ["E203"]  # Whitespace before ':' (conflicts with black)

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501"]  # Ignore line length in migrations

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"
